update edit, delete

--- a/src/main/resources/templates/Components/navigationBar.html
+++ b/src/main/resources/templates/Components/navigationBar.html
@@ -45,7 +45,7 @@
                                         <a rel="nofollow" th:href="@{/createNewBlog}">Create New Blog</a>
                                     </li>
                                     <li>
-                                        <a rel="nofollow" th:href="@{#}" th:text="${#request.userPrincipal.name}"></a>
+                                        <a rel="nofollow" th:href="@{/profile}" th:text="${#request.userPrincipal.name}"></a>
                                     </li>
                                     <li>
                                         <a rel="nofollow" th:href="@{/logout}">logout</a>
