--- a/src/main/resources/templates/Components/navigationBar.html
+++ b/src/main/resources/templates/Components/navigationBar.html
@@ -51,6 +51,9 @@
                                         <a rel="nofollow" th:href="@{/logout}">logout</a>
                                     </li>
                                 </th:block>
+                                <li sec:authorize="hasAuthority('ADMIN')">
+                                    <a rel="nofollow" th:href="@{/admin}" th:text="Admin"></a>
+                                </li>
                                 <li th:if="${#request.userPrincipal == null}">
                                     <a rel="nofollow" th:href="@{/login}">Login</a>
                                 </li>
