--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -245,7 +245,7 @@
                     </div>
                 </form>
                 <div class="group">
-                    <a href="home">
+                    <a th:href="@{/home}">
                         <button class="button">Home</button>
                     </a>
                 </div>
